<resources>
    <string name="app_name">Geet</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="all_songs">All Songs</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="song_playback">Song Playback</string>
    <string name="song_playback_controls">Song playback controls</string>
    <string name="now_playing">Now Playing</string>
    <string name="queue">Queue</string>
    <string name="no_year">No Year</string>
    <string name="play">Play</string>
    <string name="go_to_album">Go to Album</string>
    <string name="go_to_artist">Go to Artist</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="no_playlist_added">No Playlist Added</string>
    <string name="give_a_playlist_name">Give a playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="no_albums_available">No albums available</string>
    <string name="no_songs_available">No songs available</string>
    <string name="search_songs_artists_albums">Search songs, artists, albums...</string>
    <string name="no_artists_available">No artists available</string>
    <string name="no_results">No results</string>
    <string name="ascending_a_z">Ascending A-Z</string>
    <string name="descending_z_a">Descending Z-A</string>
    <string name="by_year">By Year</string>
    <string name="by_duration">By Duration</string>
    <string name="remove_from_this_playlist">Remove from this playlist</string>
    <string name="delete">Delete</string>
</resources>