<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvGivePlaylistNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_a_playlist_name"
        android:textSize="16sp"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvGivePlaylistNameText"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvCancelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        app:layout_constraintTop_toBottomOf="@id/etPlaylistName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/tvCreateDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/inter_semibold"
        app:layout_constraintTop_toBottomOf="@id/etPlaylistName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>