<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SongBottomSheetFragment"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <View
        android:layout_width="60dp"
        android:layout_height="3dp"
        android:background="@drawable/bottom_sheet_handle"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/ivSongArtworkSheet"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_album_disk"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/tvSongNameSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Song Name"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/inter_regular"
        android:lines="1"
        android:ellipsize="marquee"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <TextView
        android:id="@+id/tvArtistNameSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Artist Name"
        android:textColor="@color/white_alpha_60"
        android:textSize="12sp"
        android:fontFamily="@font/inter_regular"
        android:lines="1"
        android:ellipsize="marquee"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="16dp"/>

    <LinearLayout
        android:id="@+id/llAddToPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_add_to_playlist"
            app:tint="@color/white_alpha_60" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/add_to_playlist"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:lines="1"
            android:ellipsize="marquee"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRemoveFromPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_remove_circle"
            app:tint="@color/white_alpha_60" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/remove_from_this_playlist"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:lines="1"
            android:ellipsize="marquee"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddToQueue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_add_to_queue"
            app:tint="@color/white_alpha_60" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/add_to_queue"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:lines="1"
            android:ellipsize="marquee"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGoToAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_album_disk"
            app:tint="@color/white_alpha_60" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/go_to_album"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:lines="1"
            android:ellipsize="marquee"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGoToArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_person"
            app:tint="@color/white_alpha_60" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/go_to_artist"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:lines="1"
            android:ellipsize="marquee"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>